--- a/index.html
+++ b/index.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shoes Store</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="menu">
+            <a class="logo" href=""><img src="img/logo-color.png" alt="icon"></a>
+            <p class="texto1">TODOS OS PRODUTOS</p>
+            <P class="text2">COLEÇOES</P>
+            <P class="texto3">OUTLET</P>
+        </div>
+    </header>
+    <main>
+        <div class="banner">
+            <a href=""><img src="img/banner.png" alt="banner"></a>
+        </div>
+        <div class="estilo">
+            <h1>encontre seu estilo</h1>
+        </div>
+        <div class="destaque">
+            <a class="foto1" href=""><img src="img/photoshoot-1.png" alt="foto1"> </a>
+            <a class="foto2" href=""><img src="img/photoshoot-2.png" alt="foto2"> </a>
+
+        </div>
+
+    </main>
+
+
+
+
+
+
+
+
+    <footer>
+
+
+
+    </footer>
+
 </body>
+
 </html>
