--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 
 <body>
-    <header>
-        <div class="menu">
-            <a class="logo" href=""><img src="img/logo-color.png" alt="icon"></a>
-            <p class="texto1">TODOS OS PRODUTOS</p>
-            <P class="text2">COLEÇOES</P>
-            <P class="texto3">OUTLET</P>
-        </div>
+    <header class="header">
+        <img src="img/logo-color.png" alt="" class="logo">
+
+        <nav>
+            <ul class="nav-links">
+                <li><a href="index.html">Todos os Produtos</a></li>
+                <li><a href="sobre.html">Coleções</a></li>
+                <li><a href="contato.html">Outlet</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <div class="banner">
@@ -27,6 +30,16 @@
         <div class="destaque">
             <a class="foto1" href=""><img src="img/photoshoot-1.png" alt="foto1"> </a>
             <a class="foto2" href=""><img src="img/photoshoot-2.png" alt="foto2"> </a>
+
+        </div>
+
+        <div id="box">
+            <h3>30% OFF</h3>
+            <img class="sapato" src="img/shoes1.png" alt="sapato1">
+            <img class="sapato" src="img/shoes2.png" alt="sapato2">
+            <img class="sapato" src="img/shoes3.png" alt="sapato3">
+            <img class="sapato" src="img/shoes4.png" alt="sapato4">
+
 
         </div>
 
