--- a/index.html
+++ b/index.html
@@ -39,23 +39,50 @@
             <img class="sapato" src="img/shoes2.png" alt="sapato2">
             <img class="sapato" src="img/shoes3.png" alt="sapato3">
             <img class="sapato" src="img/shoes4.png" alt="sapato4">
+        </div>
 
-
+        <div id="final">
+            <div class="destaque1">
+                <p>SANDÁLIA PALMILHA MATELASSÊ TIRAS ROLOTÊ</p>
+            </div>
+            <div class="verDetalhes">
+                <p>ver detalhes</p>
+            </div>
+            <div class="fotosFinal">
+                <img class="foto3" src="img/photoshoot-3.png" alt="sandalia1">
+                <img class="foto4" src="img/photoshoot-4.png" alt="sandalia2">
+            </div>
         </div>
 
     </main>
 
-
-
-
-
-
-
-
-    <footer>
-
-
-
+    <footer class="footer">
+        <div id="logoFooter">
+            <img src="./img/shoes-logo-white-3 1.png" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit culpa temporibus commodi aspernatur rerum .
+            </p>
+        </div>
+        <div class="lista">
+            <ul>
+                <p>categorias</p>
+                <li><a href="./index.html">sandalias</a></li>
+                <li><a href="">botas</a></li>
+                <li><a href="">tênis</a></li>
+                <li><a href="">oxford</a></li>
+                <li><a href="">coturnos</a></li>
+            </ul>
+        </div>
+        <div class="lista">
+            <ul>
+                <p>institucional</p>
+                <li><a href="">sobre nós</a></li>
+                <li><a href="">perguntas frequentes</a></li>
+                <li><a href="">politica de privacidade</a></li>
+                <li><a href="">rastreamento de pedidos</a></li>
+                <li><a href="./trabalheConosco.html">trabalhe conosco</a></li>
+                <li><a href=" ">contato</a></li>
+            </ul>
+        </div>
     </footer>
 
 </body>
