--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
             <img class="sapato" src="img/shoes4.png" alt="sapato4">
         </div>
 
-        <div id="final">
-            <div class="destaque1">
-                <p>SANDÁLIA PALMILHA MATELASSÊ TIRAS ROLOTÊ</p>
+        <div class="final">
+            <div class="foto3">
+                <p>SANDÁLIA PALMILHA 
+                    MATELASSÊ TIRAS ROLOTÊ</p>
+                <div id="verdetalhes">
+                    <p><a href="">ver detalhes</a></p>
+                </div>
+                <img src="img/photoshoot-3.png" alt="">
             </div>
-            <div class="verDetalhes">
-                <p>ver detalhes</p>
+            <div class="foto4">
+                <img src="img/photoshoot-4.png" alt="">
             </div>
-            <div class="fotosFinal">
-                <img class="foto3" src="img/photoshoot-3.png" alt="sandalia1">
-                <img class="foto4" src="img/photoshoot-4.png" alt="sandalia2">
-            </div>
-        </div>
 
     </main>
 
