--- a/trabalheConosco.html
+++ b/trabalheConosco.html
@@ -23,6 +23,10 @@
         </nav>
     </header>
 
+    <div class="freteGratis">
+      <p>MÊS DE SETEMBRO - FRETE GRÁTIS PARA TODO O BRASIL!</p>
+    </div>
+
     <main class="container">
       <section class="form">
           <h1>Faça parte do nosso time</h1>
